Initial data analysis of Carbon Mapper
Make data analysis notebook and import saved clean data. Merge Carbon Mapper data frame with metered data from Philippine. Initial rough parity chart.

--- a/02_data_cleaning.ipynb
+++ b/02_data_cleaning.ipynb
@@ -1,11 +1,29 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
+   "source": [
+    "# Clean Operator Data Reports\n",
+    "Code author: Sahar H. El Abbadi\n",
+    "Date started: 2022-02-22\n",
+    "Date last edited: 2022-02-23\n",
+    "\n",
+    "### Notes\n",
+    "- Currently, this calls and cleans data for Stage 1 for Carbon Mapper, GHGSat, and Kairos LS23 pod\n",
+    "- Takes operator reports as input from 00_raw_data. No changes were made to operator reported results\n",
+    "\n",
+    "### To Do:\n",
+    "- Change code so that cleaning each data file is a function that takes a the spreadsheet as input. This way, I can run the function on Stage 1, 2, 3 data and not copy huge chunks of code with only minor changes to syntax along the way\n",
+    "- Consider: do I want to combine all the output clean data into one massive dataframe, which I then filter as needed downstream?\n",
+    "- Need to add Scientific Aviation"
+   ],
    "metadata": {
-    "collapsed": true
-   },
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -14,7 +32,10 @@
     "import pathlib\n",
     "import datetime\n",
     "from data_methods import convert_utc, convert_to_twentyfour"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
@@ -46,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,9 +213,7 @@
     "### Generate data frame with the following columns:\n",
     "- Operator: name of operator (kairos, ghgsat, carbonmapper, scientificav)\n",
     "- Stage: stage of unblinding (1, 2, or 3)\n",
-    "- PerformerExperimentID: Unique alphanumeric ID for each overpass. First two letters indicate the operator being tested (CM = Carbon Mapper, GH = GHGSat, KA = Kairos, SC = SciAv), followed by the overpass number. Overpass number starts at 1 and increments by 1 for each overpass. For example:\n",
-    "    - CM-001 means Carbon Mapper - first overpass\n",
-    "    - KA-34 means Kairos - 34th overpass\n",
+    "- PerformerExperimentID: Overpass number for a specific operator, incrementing by 1 for each overpass\n",
     "- DateOfSurvey: date in YYYY-MM-DD format\n",
     "- TimestampUTC: timestamp in UTC using 24 hour time\n",
     "- QuantifiedPlume: boolean input, 1 indicates operator submitted a valid quantification estimate for this overpass (excludes quantification estimates that are provided but fail operator QC standards)\n",
@@ -208,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +312,7 @@
     "    new_row = {\n",
     "            'Operator': 'CarbonMapper',\n",
     "            'Stage': cm_stage,\n",
-    "            'PerformerExperimentID': f'CM-{overpass:1.0f}',\n",
+    "            'PerformerExperimentID': overpass,\n",
     "            'DateOfSurvey': cm_1.loc[overpass-1, \"DateOfSurvey\"].strftime('%Y-%m-%d'),\n",
     "            'TimestampUTC': utc_time,\n",
     "            'QuantifiedPlume': quantified,\n",
@@ -337,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +398,7 @@
     "    new_row = {\n",
     "            'Operator': 'GHGSat-AV',\n",
     "            'Stage': ghg_stage,\n",
-    "            'PerformerExperimentID': f'GH-{overpass:1.0f}',\n",
+    "            'PerformerExperimentID': overpass,\n",
     "            'DateOfSurvey': ghg_1.loc[overpass-1, \"DateOfSurvey\"],\n",
     "            'TimestampUTC': utc_time,\n",
     "            'QuantifiedPlume': quantified,\n",
@@ -421,55 +440,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          Operator  Stage PerformerExperimentID DateOfSurvey TimestampUTC  \\\n",
-      "0    Kairos - LS23      1                  KA-1     10/24/22     16:46:16   \n",
-      "1    Kairos - LS23      1                  KA-2     10/24/22     16:49:22   \n",
-      "2    Kairos - LS23      1                  KA-3     10/24/22     16:52:33   \n",
-      "3    Kairos - LS23      1                  KA-4     10/24/22     16:55:42   \n",
-      "4    Kairos - LS23      1                  KA-5     10/24/22     16:59:02   \n",
-      "..             ...    ...                   ...          ...          ...   \n",
-      "344  Kairos - LS23      1                KA-345     10/28/22     20:27:06   \n",
-      "345  Kairos - LS23      1                KA-346     10/28/22     20:30:10   \n",
-      "346  Kairos - LS23      1                KA-347     10/28/22     20:33:34   \n",
-      "347  Kairos - LS23      1                KA-348     10/28/22     20:36:39   \n",
-      "348  Kairos - LS23      1                KA-349     10/28/22     20:39:57   \n",
-      "\n",
-      "     QuantifiedPlume FacilityEmissionRate  FacilityEmissionRateUpper  \\\n",
-      "0                  1                    0                        NaN   \n",
-      "1                  1                    0                        NaN   \n",
-      "2                  0                  NaN                        NaN   \n",
-      "3                  1             17.57448                        NaN   \n",
-      "4                  1              30.7568                        NaN   \n",
-      "..               ...                  ...                        ...   \n",
-      "344                1            475.20016                        NaN   \n",
-      "345                1              556.924                        NaN   \n",
-      "346                1            468.15424                        NaN   \n",
-      "347                1             19.76352                        NaN   \n",
-      "348                1            149.15712                        NaN   \n",
-      "\n",
-      "     FacilityEmissionRateLower UncertaintyType  OperatorWindspeed QCFlag  \n",
-      "0                          NaN             nan                NaN  clear  \n",
-      "1                          NaN             nan                NaN  clear  \n",
-      "2                          NaN             nan                NaN   KA-1  \n",
-      "3                          NaN             nan               4.25  clear  \n",
-      "4                          NaN             nan               4.20  clear  \n",
-      "..                         ...             ...                ...    ...  \n",
-      "344                        NaN             nan               3.17  clear  \n",
-      "345                        NaN             nan               3.17  clear  \n",
-      "346                        NaN             nan               3.18  clear  \n",
-      "347                        NaN             nan               3.19  clear  \n",
-      "348                        NaN             nan               3.20  clear  \n",
-      "\n",
-      "[349 rows x 12 columns]\n"
-     ]
-    }
-   ],
+   "execution_count": 27,
+   "outputs": [],
    "source": [
     "# Kairos Data Cleaning\n",
     "\n",
@@ -523,7 +495,7 @@
     "    new_row = {\n",
     "            'Operator': 'Kairos - LS23',\n",
     "            'Stage': kairos_stage,\n",
-    "            'PerformerExperimentID': f'KA-{overpass:1.0f}',\n",
+    "            'PerformerExperimentID': overpass,\n",
     "            'DateOfSurvey': kairos_ls23_1.loc[overpass-1, \"DateOfSurvey\"],\n",
     "            'TimestampUTC': utc_time,\n",
     "            'QuantifiedPlume': quantified,\n",
@@ -554,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "outputs": [],
    "source": [],
    "metadata": {
