Save clean data from Stage 2

--- a/03_parity_plots.ipynb
+++ b/03_parity_plots.ipynb
@@ -21,7 +21,7 @@
     "import pandas as pd\n",
     "import pathlib\n",
     "from plot_methods import plot_parity, select_valid_overpasses\n",
-    "from data_methods import load_clean_data, load_meter_data\n"
+    "from data_manipulation_methods import load_clean_data, load_meter_data\n"
    ],
    "metadata": {
     "collapsed": false
