--- a/02_data_cleaning.ipynb
+++ b/02_data_cleaning.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# GHGSat Stage 1\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,8 +235,8 @@
     "ghg_2_clean = clean_ghgsat(ghg_report=ghg_2, ghg_overpasses=ghg_overpass, ghg_stage=ghg_stage)\n",
     "\n",
     "# Save data\n",
-    "ghg_1_clean.to_csv(pathlib.PurePath('01_clean_data', 'ghg_clean.csv'))\n",
-    "ghg_2_clean.to_csv(pathlib.PurePath('01_clean_data', 'ghg_clean.csv'))"
+    "ghg_1_clean.to_csv(pathlib.PurePath('01_clean_data', 'ghg_1_clean.csv'))\n",
+    "ghg_2_clean.to_csv(pathlib.PurePath('01_clean_data', 'ghg_2_clean.csv'))"
    ]
   },
   {
@@ -274,7 +274,6 @@
     "# Kairos Stage 1\n",
     "kairos_ls23_1_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage1_podLS23_submitted-2022-11-17.csv')\n",
     "kairos_ls25_1_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage1_podLS25_submitted-2022-11-17.csv')\n",
-    "\n",
     "kairos_ls23_1 = pd.read_csv(kairos_ls23_1_path)\n",
     "kairos_ls25_1 = pd.read_csv(kairos_ls25_1_path)\n",
     "\n",
@@ -337,7 +336,13 @@
     "# Stage 2, pods LS23 and LS25\n",
     "kairos_stage = 2\n",
     "kairos_2_ls23_clean = clean_kairos(kairos_report=kairos_ls23_2, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)\n",
-    "kairos_2_ls25_clean = clean_kairos(kairos_report=kairos_ls25_2, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)"
+    "kairos_2_ls25_clean = clean_kairos(kairos_report=kairos_ls25_2, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)\n",
+    "\n",
+    "# Save Data\n",
+    "kairos_1_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_1_ls23.csv'))\n",
+    "kairos_1_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_1_ls25.csv'))\n",
+    "kairos_2_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_2_ls23.csv'))\n",
+    "kairos_2_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_2_ls25.csv'))"
    ],
    "metadata": {
     "collapsed": false
