Plot all Stage 2 figures
Includes minor debugging of cleanup code to deal with inconsistencies in data reporting across Stages 1 and 2

--- a/02_data_cleaning.ipynb
+++ b/02_data_cleaning.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "# Carbon Mapper Stage 2\n",
     "cm_2_path = pathlib.PurePath('00_raw_data', 'CM_Stage2_submitted-2023-02-13.xlsx')\n",
-    "cm_2 = pd.read_excel(cm_1_path, sheet_name='Survey Summary')\n"
+    "cm_2 = pd.read_excel(cm_2_path, sheet_name='Survey Summary')\n"
    ]
   },
   {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Carbon Mapper data cleaning\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# GHGSat Stage 1\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# Kairos Stage 1\n",
@@ -278,7 +278,7 @@
     "kairos_ls25_1 = pd.read_csv(kairos_ls25_1_path)\n",
     "\n",
     "# GHGSat Stage 2\n",
-    "kairos_ls23_2_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage2_podLS25_submitted-2022-12-20.csv')\n",
+    "kairos_ls23_2_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage2_podLS23_submitted-2022-12-20.csv')\n",
     "kairos_ls25_2_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage2_podLS25_submitted-2022-12-20.csv')\n",
     "kairos_ls23_2 = pd.read_csv(kairos_ls23_2_path)\n",
     "kairos_ls25_2 = pd.read_csv(kairos_ls25_2_path)"
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Kairos Data Cleaning\n",
@@ -339,10 +339,10 @@
     "kairos_2_ls25_clean = clean_kairos(kairos_report=kairos_ls25_2, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)\n",
     "\n",
     "# Save Data\n",
-    "kairos_1_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_1_ls23.csv'))\n",
-    "kairos_1_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_1_ls25.csv'))\n",
-    "kairos_2_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_2_ls23.csv'))\n",
-    "kairos_2_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_2_ls25.csv'))"
+    "kairos_1_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_1_ls23_clean.csv'))\n",
+    "kairos_1_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_1_ls25_clean.csv'))\n",
+    "kairos_2_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_2_ls23_clean.csv'))\n",
+    "kairos_2_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_2_ls25_clean.csv'))"
    ],
    "metadata": {
     "collapsed": false
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Array with column names for clean data\n",
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "# Scientific Aviation data import\n",
@@ -428,34 +428,6 @@
     "sciav_path = pathlib.PurePath('00_raw_data', 'SciAv_Stage1_submitted-2023-02-21.xlsx')\n",
     "sciav_1 = pd.read_excel(sciav_path)"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Export and save data\n",
-    "- Export all data and save data\n",
-    "- For now, this is all Stage 1 (and Kairos is ls23)\n",
-    "- Ultimately, I want to add Stage 2 data and ls25 for Kairos\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kairos_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_clean.csv'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
