Add Kairos Stage 3 data cleaning and generating parity plots

--- a/02_data_cleaning.ipynb
+++ b/02_data_cleaning.ipynb
@@ -277,11 +277,17 @@
     "kairos_ls23_1 = pd.read_csv(kairos_ls23_1_path)\n",
     "kairos_ls25_1 = pd.read_csv(kairos_ls25_1_path)\n",
     "\n",
-    "# GHGSat Stage 2\n",
+    "# Kairos Stage 2\n",
     "kairos_ls23_2_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage2_podLS23_submitted-2022-12-20.csv')\n",
     "kairos_ls25_2_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage2_podLS25_submitted-2022-12-20.csv')\n",
     "kairos_ls23_2 = pd.read_csv(kairos_ls23_2_path)\n",
-    "kairos_ls25_2 = pd.read_csv(kairos_ls25_2_path)"
+    "kairos_ls25_2 = pd.read_csv(kairos_ls25_2_path)\n",
+    "\n",
+    "# Kairos Stage 3\n",
+    "kairos_ls23_3_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage3_podLS23_submitted-2023-02-23.csv')\n",
+    "kairos_ls25_3_path = pathlib.PurePath('00_raw_data', 'Kairos_Stage3_podLS25_submitted-2023-02-23.csv')\n",
+    "kairos_ls23_3 = pd.read_csv(kairos_ls23_3_path)\n",
+    "kairos_ls25_3 = pd.read_csv(kairos_ls25_3_path)"
    ],
    "metadata": {
     "collapsed": false
@@ -338,11 +344,18 @@
     "kairos_2_ls23_clean = clean_kairos(kairos_report=kairos_ls23_2, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)\n",
     "kairos_2_ls25_clean = clean_kairos(kairos_report=kairos_ls25_2, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)\n",
     "\n",
+    "# Stage 3, pods LS23 and LS25\n",
+    "kairos_stage = 3\n",
+    "kairos_3_ls23_clean = clean_kairos(kairos_report=kairos_ls23_3, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)\n",
+    "kairos_3_ls25_clean = clean_kairos(kairos_report=kairos_ls25_3, kairos_overpasses=kairos_overpass, kairos_stage=kairos_stage)\n",
+    "\n",
     "# Save Data\n",
     "kairos_1_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_1_ls23_clean.csv'))\n",
     "kairos_1_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_1_ls25_clean.csv'))\n",
     "kairos_2_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_2_ls23_clean.csv'))\n",
-    "kairos_2_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_2_ls25_clean.csv'))"
+    "kairos_2_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_2_ls25_clean.csv'))\n",
+    "kairos_3_ls23_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_3_ls23_clean.csv'))\n",
+    "kairos_3_ls25_clean.to_csv(pathlib.PurePath('01_clean_data', 'kairos_3_ls25_clean.csv'))"
    ],
    "metadata": {
     "collapsed": false
