Begin adapting Yulia's probability of detection code
I used Yulia's code to:
1. Create a data frame that includes all non-zero releases below a threshold of interest. This data frame indicates if the operator detected the release, what the operator estimated rate was, and what the true rate was
2. Use this data frame to calculate the probability of detecting a release that is conducted within bin size of interest

Next steps: need to transform the outputs of this code into an actual plot. Continue using Yulia's code as a guide: https://github.com/yuliachen/Single-blind-test-of-airplane-based-hyperspectral-methane-detection-via-controlled-releases/blob/master/github_version/functions/min_detection.py

--- a/02_data_cleaning.ipynb
+++ b/02_data_cleaning.ipynb
@@ -79,7 +79,7 @@
     "Column: \"Good Quality (Y/N)\"\n",
     "- Y = good quality, quantification included for this stage\n",
     "- N = not good quality, quantification estimate included for potential use in a later stage, but not included in this stage\n",
-    "- nan = left blank by Carbon Mapper\n"
+    "- nan = left blank by Carbon Mapper. All entries that are left blank correspond to overpasses in which CarbonMapper did not observe a released plume. For these cases, \"Quantified\" column reads \"no_detect\"\n"
    ]
   },
   {
