--- a/03_parity_plots.ipynb
+++ b/03_parity_plots.ipynb
@@ -2,31 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Generate Parity Plots for Operator Results\n",
     "Code author: Sahar H. El Abbadi\n",
     "Date started: 2022-02-23\n",
     "Date last edited: 2022-02-27"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "from plot_methods import plot_parity, select_valid_overpasses\n",
     "from data_manipulation_methods import load_clean_data, load_meter_data\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Load Data\n",
     "\n",
@@ -38,14 +35,12 @@
     "- Includes metered flow data, in kgh\n",
     "- Includes flow rates are calculated based on timestamps provided by operators and timestamps as determined by Stanford based on overpass time. Will need to determine which value to use for consistency\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load clean operator data\n",
@@ -59,14 +54,12 @@
     "# kairos_meter = metered data for Kairos overpasses\n",
     "\n",
     "cm_meter, ghg_meter, kairos_meter = load_meter_data()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -87,14 +80,12 @@
     "\n",
     "# Make parity plot\n",
     "plot_parity(operator, stage, cm_1, cm_meter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -115,14 +106,12 @@
     "\n",
     "# Make parity plot\n",
     "plot_parity(operator, stage, cm_2, cm_meter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -142,14 +131,12 @@
     "\n",
     "# Make parity plot\n",
     "plot_parity(operator, stage, ghg_1, ghg_meter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -169,14 +156,12 @@
     "\n",
     "# Make parity plot\n",
     "plot_parity(operator, stage, ghg_2, ghg_meter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -196,14 +181,12 @@
     "\n",
     "# Make parity plot\n",
     "plot_parity(operator, stage, kairos_1_ls23, kairos_meter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -223,14 +206,12 @@
     "\n",
     "# Make parity plot\n",
     "plot_parity(operator, stage, kairos_1_ls25, kairos_meter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -250,14 +231,12 @@
     "\n",
     "# Make parity plot\n",
     "plot_parity(operator, stage, kairos_2_ls23, kairos_meter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -277,14 +256,12 @@
     "\n",
     "# Make parity plot\n",
     "plot_parity(operator, stage, kairos_2_ls25, kairos_meter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -304,14 +281,12 @@
     "\n",
     "# Make parity plot\n",
     "plot_parity(operator, stage, kairos_3_ls23, kairos_meter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -331,40 +306,28 @@
     "\n",
     "# Make parity plot\n",
     "plot_parity(operator, stage, kairos_3_ls25, kairos_meter)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
