Add "Detected" column to cleaned up Kairos and GHGSat data

--- a/02_data_cleaning.ipynb
+++ b/02_data_cleaning.ipynb
@@ -236,7 +236,9 @@
     "\n",
     "# Save data\n",
     "ghg_1_clean.to_csv(pathlib.PurePath('01_clean_data', 'ghg_1_clean.csv'))\n",
-    "ghg_2_clean.to_csv(pathlib.PurePath('01_clean_data', 'ghg_2_clean.csv'))"
+    "ghg_2_clean.to_csv(pathlib.PurePath('01_clean_data', 'ghg_2_clean.csv'))\n",
+    "\n",
+    "\n"
    ]
   },
   {
