--- a/03_parity_plots.ipynb
+++ b/03_parity_plots.ipynb
@@ -11,17 +11,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Imports\n",
-    "from plot_methods import plot_parity, select_valid_overpasses\n",
-    "from data_manipulation_methods import load_clean_data, load_meter_data\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -39,10 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Setup\n",
+    "\n",
+    "# Imports\n",
+    "from plot_methods import plot_parity, select_valid_overpasses\n",
+    "from data_manipulation_methods import load_clean_data, load_meter_data\n",
+    "\n",
     "# Load clean operator data\n",
     "# format for naming: [operator]_stage\n",
     "\n",
@@ -55,6 +50,77 @@
     "\n",
     "cm_meter, ghg_meter, kairos_meter = load_meter_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Unnamed: 0   Operator  Stage  PerformerExperimentID DateOfSurvey  \\\n",
+      "0             0  GHGSat-AV      1                    1.0   2022-10-31   \n",
+      "1             1  GHGSat-AV      1                    2.0   2022-10-31   \n",
+      "2             2  GHGSat-AV      1                    3.0   2022-10-31   \n",
+      "3             3  GHGSat-AV      1                    4.0   2022-10-31   \n",
+      "4             4  GHGSat-AV      1                    5.0   2022-10-31   \n",
+      "..          ...        ...    ...                    ...          ...   \n",
+      "187         187  GHGSat-AV      1                  188.0   2022-11-07   \n",
+      "188         188  GHGSat-AV      1                  189.0   2022-11-07   \n",
+      "189         189  GHGSat-AV      1                  190.0   2022-11-07   \n",
+      "190         190  GHGSat-AV      1                  191.0   2022-11-07   \n",
+      "191         191  GHGSat-AV      1                  192.0   2022-11-07   \n",
+      "\n",
+      "    TimestampUTC  QuantifiedPlume  FacilityEmissionRate  \\\n",
+      "0       17:03:54                1                 151.0   \n",
+      "1       17:06:59                1                 129.0   \n",
+      "2       17:10:46                1                 209.0   \n",
+      "3       17:14:04                1                  88.0   \n",
+      "4       17:17:09                1                 108.0   \n",
+      "..           ...              ...                   ...   \n",
+      "187     21:52:46                1                  17.0   \n",
+      "188     21:57:17                1                  11.0   \n",
+      "189     22:01:28                1                   NaN   \n",
+      "190     22:05:48                1                   NaN   \n",
+      "191     22:09:36                1                   NaN   \n",
+      "\n",
+      "     FacilityEmissionRateUpper  FacilityEmissionRateLower UncertaintyType  \\\n",
+      "0                        204.0                       98.0         1-sigma   \n",
+      "1                        174.0                       84.0         1-sigma   \n",
+      "2                        281.0                      137.0         1-sigma   \n",
+      "3                        119.0                       57.0         1-sigma   \n",
+      "4                        145.0                       71.0         1-sigma   \n",
+      "..                         ...                        ...             ...   \n",
+      "187                       26.0                        8.0         1-sigma   \n",
+      "188                       17.0                        5.0         1-sigma   \n",
+      "189                        NaN                        NaN         1-sigma   \n",
+      "190                        NaN                        NaN         1-sigma   \n",
+      "191                        NaN                        NaN         1-sigma   \n",
+      "\n",
+      "     OperatorWindspeed QCFlag  \n",
+      "0                 1.60   GH-1  \n",
+      "1                 1.57   GH-1  \n",
+      "2                 1.57   GH-1  \n",
+      "3                 1.54   GH-1  \n",
+      "4                 1.53   GH-1  \n",
+      "..                 ...    ...  \n",
+      "187               3.05   GH-1  \n",
+      "188               3.07   GH-1  \n",
+      "189                NaN   GH-1  \n",
+      "190                NaN   GH-1  \n",
+      "191                NaN   GH-1  \n",
+      "\n",
+      "[192 rows x 13 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ghg_1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -76,9 +142,9 @@
     "# Info for plotting\n",
     "operator = 'CarbonMapper'\n",
     "stage = 1\n",
-    "cm_1_plot = select_valid_overpasses(cm_1, cm_meter)\n",
     "\n",
     "# Make parity plot\n",
+    "# plot_parity function filters for valid overpasses using Stanford's QC criteria\n",
     "plot_parity(operator, stage, cm_1, cm_meter)"
    ]
   },
