--- a/04_probability_of_detection.ipynb
+++ b/04_probability_of_detection.ipynb
@@ -90,7 +90,7 @@
     "bins = np.linspace(0, threshold, n_bins+1)\n",
     "detection_probability = np.zeros(n_bins)\n",
     "\n",
-    "# What are you initializing here, Yulia? Are these all trackers of some sort?\n",
+    "# These variables are for keeping track of values as I iterate through the bins in the for loop below:\n",
     "bin_size, bin_num_detected = np.zeros(n_bins).astype('int'), np.zeros(n_bins).astype('int')\n",
     "bin_median = np.zeros(n_bins)\n",
     "bin_two_sigma = np.zeros(n_bins)\n",
